# emoji-investigation

./: .envrc  base_explore.py  behavior_annotations.py  behavior_summary.md  bench_existence.py  bench_what_is.py  explore.py  explore_dla.py  explore_logit.py  explore_patching.py  flake.nix  main.py  notes.md  pyproject.toml  t.py  task.md
findings/: emoji_armadillo_greedy.md  emoji_armadillo_greedy_base.md  emoji_axolotl_greedy.md  emoji_axolotl_greedy_base.md  emoji_bench.md  emoji_capybara_greedy.md  emoji_capybara_greedy_base.md  emoji_narwhal_greedy.md  emoji_narwhal_greedy_base.md  emoji_octopus_greedy.md  emoji_octopus_greedy_base.md  emoji_octopus_temp.md  emoji_octopus_temp_1.md  emoji_platypus_greedy.md  emoji_platypus_greedy_base.md  emoji_refrigerator_greedy.md  emoji_seahorse_greedy.md  emoji_seahorse_greedy_base.md  emoji_seahorse_temp_1.md  emoji_seahorse_temp_2.md  emoji_snail_greedy.md  emoji_snail_greedy_base.md  emoji_snail_inp.md  emoji_swordfish_greedy.md  emoji_swordfish_greedy_base.md  emoji_table_greedy.md  patching.md  what_is_comparison.md
