[project]
name = "neel-mats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.8",
    "modal>=1.3.0.post1",
    "python-dotenv>=1.2.1",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
